# smoothbp

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS.md  README.md  cleanup.win  configure.win
R/: bridge_sampling.R  derivative.R  extendr-wrappers.R  formula_utils.R  generics.R  hypothesis.R  methods_text.R  plot_methods.R  postprocess.R  postprocess_ss.R  priors.R  recovery.R  results_text.R  robustify.R  simulate.R  smoothbp.R  smoothbp_ss.R  tab_model.R  utils.R
inst/: WORDLIST
inst/doc/: advanced-modeling.R  advanced-modeling.html  brms-comparison.R  brms-comparison.Rmd  getting-started.R  (+9 more)
man/: as.data.frame.smoothbp_fit.Rd  bayes_factor.smoothbp_fit.Rd  bridge_sampler.smoothbp_fit.Rd  derivative.Rd  fitted.smoothbp_fit.Rd  fixed.Rd  hypothesis.Rd  log_lik.Rd  model_methods.Rd  model_results.Rd  pip.Rd  plot.smoothbp_fit.Rd  plot.smoothbp_pip.Rd  print.smoothbp_fit.Rd  prior_gamma.Rd  prior_invgamma.Rd  prior_normal.Rd  prior_spike_slab.Rd  recovery_plot.Rd  reexports.Rd  robustify.Rd  round_df.Rd  simulate_smoothbp.Rd  smoothbp.Rd  smoothbp_priors.Rd  smoothbp_ss.Rd  space_omega_priors.Rd  summary.smoothbp_fit.Rd  summary.smoothbp_ss_fit.Rd  tab_smoothbp.Rd  trace_plot.Rd  true_params.Rd  update.smoothbp_fit.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  smoothbp-win.def
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: bridge.rs  lib.rs  model.rs  sampler.rs  sampler_re.rs
tests/: testthat.R
tools/: config.R  test_vignette_params.R  verify_mixing_changes.R
vignettes/: advanced-modeling.Rmd  brms-comparison.Rmd  getting-started.Rmd
(+10 files in other folders)
