[package]
name = 'smoothbp'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['rlib', 'staticlib']
name = 'smoothbp'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = "0.9.0"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
statrs = "0.16"

[profile.release]
lto = true
codegen-units = 1
